Partial Sandbox/force-app/main/default/objects/Address__c/Address__c.object-meta.xml
<CustomObject>
    <label>Address</label>
    <nameField>
        <label>Street</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>