Partial Sandbox/force-app/main/default/objects/Address__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>City of the address.</description>
    <inlineHelpText>Enter the City name of the address.</inlineHelpText>
    <label>City</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
</CustomField>