Partial Sandbox/force-app/main/default/objects/Address__c/fields/Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Address__c</fullName>
    <description>Full Mailing Address</description>
    <formula>Name &amp;&#39;, &#39; &amp;  City__c &amp; &#39;, &#39; &amp;  State__c &amp; &#39;, &#39; &amp;  Zip_Code__c</formula>
    <label>Mailing Address</label>
    <type>Text</type>
</CustomField>