Partial Sandbox/force-app/main/default/objects/Address__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>State of the address.</description>
    <inlineHelpText>Enter a two letter description of the state of the address.</inlineHelpText>
    <label>State</label>
    <length>2</length>
    <required>true</required>
    <type>Text</type>
</CustomField>