Partial Sandbox/force-app/main/default/objects/Address__c/fields/Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code__c</fullName>
    <description>The Zip/Postal code of the address.</description>
    <inlineHelpText>Enter the Zip/Postal code of the address.</inlineHelpText>
    <label>Zip Code</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>